--- a/MinistryBread.html
+++ b/MinistryBread.html
@@ -187,7 +187,7 @@
           We invite you to join us in sustaining this ministry. Please consider assisting with
           transporting packages from Panera to the church. Pickups are Sunday and Monday evenings,
           with delivery to the church the following mornings.
-          <a href="https://www.signupgenius.com/go/4090d4ba4a82ea3fd0-panara"><strong>Click here to sign
+          <a class="link" href="https://www.signupgenius.com/go/4090d4ba4a82ea3fd0-panara"><strong>Click here to sign
               up</strong></a>.
         </p>
       </div>
