--- a/VBS.html
+++ b/VBS.html
@@ -273,7 +273,7 @@
       <div class="col">
         <p>
           Courtney<br />
-          <a href="mailto:childrensministries@vmumc.com">childrensministries@vmumc.com</a>
+          <a class="link" href="mailto:childrensministries@vmumc.com">childrensministries@vmumc.com</a>
         </p>
       </div>
     </div>
