--- a/alternativechristmasgiving.html
+++ b/alternativechristmasgiving.html
@@ -219,7 +219,7 @@
     <div class="row pt-3 mx-auto text-center">
       <div class="col">
         <strong>
-          <a href="http://www.bidwellriverside.org/">Families Forward (formerly Bidwell-Riverside)</a>
+          <a class="link" href="http://www.bidwellriverside.org/">Families Forward (formerly Bidwell-Riverside)</a>
         </strong>
       </div>
     </div>
@@ -227,21 +227,21 @@
     <div class="row pt-3 mx-auto text-center">
       <div class="col">
         <strong>
-          <a href="http://www.selfhelpinternational.org/">Self Help International</a>
+          <a class="link" href="http://www.selfhelpinternational.org/">Self Help International</a>
         </strong>
       </div>
     </div>
     <!-- Link 3 -->
     <div class="row pt-3 mx-auto text-center">
       <div class="col">
-        <strong><a href="http://www.heifer.org/#">Heifer International</a></strong>
+        <strong><a class="link" href="http://www.heifer.org/#">Heifer International</a></strong>
       </div>
     </div>
     <!-- Link 4 -->
     <div class="row pt-3 mx-auto text-center">
       <div class="col">
         <strong>
-          <a href="http://www.nothingbutnets.net">United to Beat Malaria (formerly Nothing But Nets)</a>
+          <a class="link" href="http://www.nothingbutnets.net">United to Beat Malaria (formerly Nothing But Nets)</a>
         </strong>
       </div>
     </div>
