--- a/ciayouth.html
+++ b/ciayouth.html
@@ -220,7 +220,7 @@
         <p>
           <strong>Service Project <br />
             Sunday, March 10, 2024<br />12:30-4:30 </strong><br />
-          We will be going to the Bidwell Food Pantry to volunteer.<a href="https://www.signupgenius.com/go/70A0C4CACAB2AABFC1-47224683-ronald"></a><br />
+          We will be going to the Bidwell Food Pantry to volunteer.<a class="link" href="https://www.signupgenius.com/go/70A0C4CACAB2AABFC1-47224683-ronald"></a><br />
         </p>
       </div>
     </div>
