--- a/community.html
+++ b/community.html
@@ -296,7 +296,7 @@
         <p>
           The above history was taken from several sources with occasional minor differences in
           details. If you have any corrections or additions, please contact
-          <a href="mailto:office@vmumc.com">office@vmumc.com</a>.
+          <a class="link" href="mailto:office@vmumc.com">office@vmumc.com</a>.
         </p>
       </div>
     </div>
