--- a/contact.html
+++ b/contact.html
@@ -184,7 +184,7 @@
     <!-- Email Info -->
     <div class="row mx-auto pt-3">
       <div class="col">
-        <p>Email us at: <a href="mailto:office@vmumc.com">office@vmumc.com</a></p>
+        <p>Email us at: <a class="link" href="mailto:office@vmumc.com">office@vmumc.com</a></p>
       </div>
     </div>
     <!-- Pastor Info -->
@@ -193,7 +193,7 @@
         <p>
           Rev. Beth Harbaugh<br />
           (319) 540-1644 (cell)<br />
-          <a href="mailto:bethmaryharbaugh@gmail.com">bethmaryharbaugh@gmail.com</a>
+          <a class="link" href="mailto:bethmaryharbaugh@gmail.com">bethmaryharbaugh@gmail.com</a>
         </p>
       </div>
     </div>
