--- a/education.html
+++ b/education.html
@@ -189,7 +189,7 @@
               elementary-age children to learn the love of Jesus while having fun. It is held
               (almost) every Wednesday through the school year, a dinner followed by an hour of
               fun learning.
-              <a href="/JAM.html">Learn more here.</a>
+              <a class="link" href="/JAM.html">Learn more here.</a>
             </p>
           </div>
         </div>
