--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="row">
           <div class="col">
             <p>
-              <strong><a href="/GLOW.html">GLOW</a></strong>,
+              <strong><a class="link" href="/GLOW.html">GLOW</a></strong>,
               (<strong>G</strong>od&nbsp;<strong>L</strong>ights&nbsp;<strong>O</strong>ur&nbsp;<strong>W</strong>ay),
               our children's program, is held at the same time as the Sunday worship service.
             </p>
@@ -178,7 +178,7 @@
             <p>
               Our <strong>Wednesday night</strong> program for youth
               <strong>kindergarten through 6th grade</strong> is
-              <strong>Kids' <a href="/JAM.html">JAM</a></strong>. It runs <strong>6:00-7:30 PM</strong>.
+              <strong>Kids' <a class="link" href="/JAM.html">JAM</a></strong>. It runs <strong>6:00-7:30 PM</strong>.
             </p>
           </div>
         </div>
@@ -229,14 +229,14 @@
               That sounds like marching orders to me!
             </p>
             <p>
-              <a href="/pastorsmessage.html">Click here to read Rev. Beth's Monthly Message.</a>
+              <a class="link" href="/pastorsmessage.html">Click here to read Rev. Beth's Monthly Message.</a>
             </p>
             <p>
-              Our regular announcements are in <em>The Grapevine, </em><a href="/Publications/VMgrapevine.pdf">here</a>.
+              Our regular announcements are in <em>The Grapevine, </em><a class="link" href="/Publications/VMgrapevine.pdf">here</a>.
             </p>
             <p>
               Stay connected by visiting our Facebook page.
-              <a href="https://www.facebook.com/Van-Meter-United-Methodist-Church-142797045750871/">You can click here
+              <a class="link" href="https://www.facebook.com/Van-Meter-United-Methodist-Church-142797045750871/">You can click here
                 to reach it.</a>
             </p>
           </div>
@@ -249,10 +249,10 @@
           <b><em>The Van Meter United Methodist Church is a community in the service of Christ</em></b>.
         </p>
         <p>
-          <a href="/directions.html">Click here for directions on how to find us.</a>
+          <a class="link" href="/directions.html">Click here for directions on how to find us.</a>
         </p>
         <p>Call us at: (515) 996-2572</p>
-        <p>Email us at: <a href="mailto:office@vmumc.com">office@vmumc.com</a></p>
+        <p>Email us at: <a class="link" href="mailto:office@vmumc.com">office@vmumc.com</a></p>
       </div>
       <!-- Calendar Section -->
       <div class="col-lg-4 text-center my-auto">
@@ -292,9 +292,9 @@
             <p>
               <strong>Ash Wednesday and Lent</strong>
               <br />
-              <a href="/pastorsmessageAshWednesday.html">Ash Wednesday</a>
+              <a class="link" href="/pastorsmessageAshWednesday.html">Ash Wednesday</a>
               marks the beginning of
-              <a href="/pastorsmessageLent.html">the Lenten season</a>. In this 40-day period,
+              <a class="link" href="/pastorsmessageLent.html">the Lenten season</a>. In this 40-day period,
               Christians worldwide prepare our hearts for Jesus' death on the cross and his
               resurrection three days later on Easter.
             </p>
@@ -319,13 +319,13 @@
               volunteers.
             </p>
             <p>
-              <a href="/ciayouth.html">Learn more about youth meetings and activites here.</a>
+              <a class="link" href="/ciayouth.html">Learn more about youth meetings and activites here.</a>
             </p>
           </div>
           <!-- Youth Service Project Image -->
           <div class="col-lg-3 align-self-center text-center">
             <p>
-              <a href="/ciayouth.html">
+              <a class="link" href="/ciayouth.html">
                 <img class="ms-md-1 ms-lg-5 w-50 w-lg-100 rounded" src="./images/youth2024.jpg"
                   alt="youth group logo - neon fish and cross on black background" />
               </a>
@@ -340,7 +340,7 @@
         </p>
         <p>
           <b>The Van Meter Church is part of the
-            <a href="http://www.iaumc.org/">Iowa Conference of the United Methodist Church.</a></b>
+            <a class="link" href="http://www.iaumc.org/">Iowa Conference of the United Methodist Church.</a></b>
         </p>
       </div>
     </div>
@@ -354,7 +354,7 @@
             <br />
             6:00-7:30 PM
             <br />
-            <a href="/JAM.html">Kids' J.A.M. (Jesus and Me)</a>
+            <a class="link" href="/JAM.html">Kids' J.A.M. (Jesus and Me)</a>
             <br />
           </strong>
           This is our Wednesday night program for elementary-age students to learn the love of
@@ -368,7 +368,7 @@
       <!-- JAM Image -->
       <div class="col-lg-3 align-self-center text-center">
         <p>
-          <a href="/JAM.html">
+          <a class="link" href="/JAM.html">
             <img class="w-50 w-lg-75 rounded" src="./images/JAM_logo.png" alt="JAM Jesus and Me (white cross atop paint splatter)" />
           </a>
         </p>
@@ -379,7 +379,7 @@
       <!-- Mission Of The Month Text -->
       <div class="col-lg-4">
         <p>
-          <strong><a href="/missionmoment.html">Missions of the Month</a><br /></strong>
+          <strong><a class="link" href="/missionmoment.html">Missions of the Month</a><br /></strong>
           <br />
           <strong>Families Forward (Bidwell Riverside)</strong><br />
           We're collecting funds and also sacks for groceries from the Bidwell Food Pantry.
@@ -388,7 +388,7 @@
       <!-- Mission Of The Month Image -->
       <div class="col-lg-3 align-self-center text-center">
         <p>
-          <a href="/missionmoment.html">
+          <a class="link" href="/missionmoment.html">
             <img class="w-50 w-lg-75 rounded" src="./images/families_forward_logo.jpg" alt="families forward logo" />
           </a>
         </p>
@@ -401,7 +401,7 @@
         <p>
           <strong>Good Samaritan Food Pantry in Adel<br /></strong> We are collecting toothpaste
           for the pantry.
-          <a href="/Publications/MissionsFoodPantry.pdf">Learn more about the food pantry here.</a>
+          <a class="link" href="/Publications/MissionsFoodPantry.pdf">Learn more about the food pantry here.</a>
         </p>
       </div>
       <!-- Food Pantry Image -->
@@ -426,7 +426,7 @@
       <!-- Adult Discussion Group Image -->
       <div class="col-lg-3 align-self-center text-center">
         <p>
-          <a href="https://www.signupgenius.com/go/4090D4BA4A82EA3FD0-worship">
+          <a class="link" href="https://www.signupgenius.com/go/4090D4BA4A82EA3FD0-worship">
             <img class="w-25 w-lg-50 rounded" src="./images/AdultDiscussion.jpg"
               alt="Adult Discussion Group logo is several crosses united at the base to form a ship's wheel." />
           </a>
@@ -440,14 +440,14 @@
         <p>
           <strong>Sign up to be a Worship Helper</strong><br />
           You may use
-          <a href="https://www.signupgenius.com/go/4090D4BA4A82EA3FD0-worship">this link</a>
+          <a class="link" href="https://www.signupgenius.com/go/4090D4BA4A82EA3FD0-worship">this link</a>
           or just talk to Leslie Herman.
         </p>
       </div>
       <!-- Worship Help Image -->
       <div class="col-lg-3 align-self-center text-center">
         <p>
-          <a href="https://www.signupgenius.com/go/4090D4BA4A82EA3FD0-worship">
+          <a class="link" href="https://www.signupgenius.com/go/4090D4BA4A82EA3FD0-worship">
             <img class="w-25 w-lg-50 rounded" src="./images/worshipHelp.jpg"
               alt="Worship Helper logo is an open door with light shining through, with the words 'Worship Helpers' above the door." />
           </a>
@@ -467,7 +467,7 @@
       <!-- Nursery Image -->
       <div class="col-lg-3 align-self-center text-center">
         <p>
-          <a href="/Publications/ExerciseYourFaith.pdf">
+          <a class="link" href="/Publications/ExerciseYourFaith.pdf">
             <img class="w-25 w-lg-50 rounded" src="./images/nursery.jpg" alt="Nursery (drawing of a rocking horse)" />
           </a>
         </p>
@@ -481,7 +481,7 @@
           <strong>Exercise Your Faith</strong>
           <br />
           Our
-          <a href="/Publications/ExerciseYourFaith.pdf">exercise group</a>
+          <a class="link" href="/Publications/ExerciseYourFaith.pdf">exercise group</a>
           meets at the church each <strong>Monday</strong> from <strong>1:30-2:30 PM</strong>.
           Join us for a time of low-impact exercises (no floor work), encouragement, and sharing
           health tips.
@@ -490,7 +490,7 @@
       <!-- Exercise Your Faith Image -->
       <div class="col-lg-3 align-self-center text-center">
         <p>
-          <a href="/Publications/ExerciseYourFaith.pdf">
+          <a class="link" href="/Publications/ExerciseYourFaith.pdf">
             <img class="w-50 w-lg-75 rounded" src="./images/ExerciseYourFaith.jpg" alt="Exercise Your Faith logo (walking group)" />
           </a>
         </p>
@@ -504,16 +504,16 @@
           <strong>Bread Ministry</strong>
           <br />
           We have a
-          <a href="/MinistryBread.html">bread ministry</a>
+          <a class="link" href="/MinistryBread.html">bread ministry</a>
           in cooperation with Panera Bread company. We need help picking up packages from Panera
           and bringing them to the church. Sign up for a one-time delivery or several.
-          <a href="https://www.signupgenius.com/go/4090d4ba4a82ea3fd0-panara">Sign up by clicking on this link.</a>
+          <a class="link" href="https://www.signupgenius.com/go/4090d4ba4a82ea3fd0-panara">Sign up by clicking on this link.</a>
         </p>
       </div>
       <!-- Bread Ministry Image -->
       <div class="col-lg-3 align-self-center text-center">
         <p>
-          <a href="/MinistryBread.html">
+          <a class="link" href="/MinistryBread.html">
             <img class="w-50 w-lg-75 rounded" src="./images/bread.png" alt="bread (three baguettes)" />
           </a>
         </p>
@@ -528,13 +528,13 @@
           <br />
           Our church is a member of the Adel Ministerial Association (AMA). The AMA has an
           emergency fund which is used as a shared resource.
-          <a href="/Publications/Adel_Ministerial_Assn_Emergency_Fund.pdf">Learn more here.</a>
+          <a class="link" href="/Publications/Adel_Ministerial_Assn_Emergency_Fund.pdf">Learn more here.</a>
         </p>
       </div>
       <!-- AMA Image -->
       <div class="col-lg-3 align-self-center text-center">
         <p>
-          <a href="/Publications/Adel_Ministerial_Assn_Emergency_Fund.pdf">
+          <a class="link" href="/Publications/Adel_Ministerial_Assn_Emergency_Fund.pdf">
             <img class="w-50 w-lg-75 rounded" src="./images/EmergencyFund.jpg" alt="Emergency Funds" />
           </a>
         </p>
