--- a/kidsCare.html
+++ b/kidsCare.html
@@ -177,14 +177,14 @@
         <strong>Kids Care Phone: 491-1198</strong>
       </div>
       <div class="col-lg-4">
-        <strong>Email: <a href="mailto:kidscare@vmumc.com">kidscare@vmumc.com</a> </strong>
+        <strong>Email: <a class="link" href="mailto:kidscare@vmumc.com">kidscare@vmumc.com</a> </strong>
       </div>
     </div>
     <!-- Kids Care Schedule and Fees PDF -->
     <div class="row mx-auto pt-5">
       <div class="col">
         <p>
-          <a href="/Publications/KidsCarePrintable.pdf">
+          <a class="link" href="/Publications/KidsCarePrintable.pdf">
             <strong>Kids Care schedule and fees</strong>
           </a>
         </p>
@@ -206,7 +206,7 @@
             <p>
               <strong>Summer 2024</strong> enrollment for our summer program is now open. Only
               Monday-Wednesday-Friday slots are currently available.
-              <a href="/Publications/KidsCare2024SummerRegistration%20form.pdf">
+              <a class="link" href="/Publications/KidsCare2024SummerRegistration%20form.pdf">
                 Here is the registration form.</a>
               Places will be filled on a first-come, first-served basis.
             </p>
@@ -217,10 +217,10 @@
           <div class="col">
             <p>
               <strong>Fall 2024</strong> enrollment is now open.
-              <a href="/Publications/KidsCare2024Preschool(Fall)Registration.pdf">
+              <a class="link" href="/Publications/KidsCare2024Preschool(Fall)Registration.pdf">
                 Here is the registration form for preschool-age children.</a>
               Places are filled on a first-come, first-served basis.
-              <a href="/Publications/KidsCare2024FallRegistrationForm.pdf"><br />
+              <a class="link" href="/Publications/KidsCare2024FallRegistrationForm.pdf"><br />
                 Here is the registration form for Fall 2024 before- and after-school care.</a>
             </p>
           </div>
@@ -230,7 +230,7 @@
           <div class="col">
             <p>
               <strong>Spring 2024</strong> before- and after-school care is available.
-              <a href="/Publications/KidsCare2023FallRegistrationForm.pdf">
+              <a class="link" href="/Publications/KidsCare2023FallRegistrationForm.pdf">
                 Here is the registration form.
               </a>
             </p>
@@ -241,7 +241,7 @@
           <div class="col">
             <p>
               <strong>
-                <a href="/Publications/KidsCare2024ParentHandbook.pdf">
+                <a class="link" href="/Publications/KidsCare2024ParentHandbook.pdf">
                   Kids Care <em>Parent Handbook</em>
                 </a>
               </strong>
@@ -370,7 +370,7 @@
     <!-- Kids Care Schedule and Fees PDF -->
     <div class="row mx-auto pt-3">
       <strong>
-        <a href="/Publications/KidsCarePrintable.pdf"> School Year (2023-2024) Fee Schedule </a>
+        <a class="link" href="/Publications/KidsCarePrintable.pdf"> School Year (2023-2024) Fee Schedule </a>
       </strong>
     </div>
     <!-- Kids Care Fun Image -->
