--- a/missionmoment.html
+++ b/missionmoment.html
@@ -250,8 +250,8 @@
           This month's personal item is <strong>toothpaste</strong>. <br />
           Please place your donation in the marked tub in the church entryway.<br />
           Learn more about the
-          <a href="/Publications/MissionsFoodPantry.pdf">food pantry here</a>
-          and <a href="/missionmomentFoodPantry.html">here</a>.
+          <a class="link" href="/Publications/MissionsFoodPantry.pdf">food pantry here</a>
+          and <a class="link" href="/missionmomentFoodPantry.html">here</a>.
         </p>
       </div>
       <!-- Good Samaritan Images Section -->
@@ -273,7 +273,7 @@
     <div class="row pt-5 mx-auto text-center">
       <div class="col">
         <h3>
-          <a href="missionmomentTeams.html">Learn about Mission Teams</a>
+          <a class="link" href="missionmomentTeams.html">Learn about Mission Teams</a>
         </h3>
       </div>
     </div>
