--- a/scholarships.html
+++ b/scholarships.html
@@ -213,7 +213,7 @@
           <div class="col">
             <p>
               For Iowa United Methodist Foundation scholarships, please
-              <a href="https://iumf.org/scholarships/">visit the Iowa United Methodist Foundation website</a>. There you
+              <a class="link" href="https://iumf.org/scholarships/">visit the Iowa United Methodist Foundation website</a>. There you
               will find more information as well as application forms.<strong>
                 IUMF applications must be postmarked no later than March 1</strong>.
             </p>
@@ -224,7 +224,7 @@
           <div class="col">
             <p>
               For GBHEM scholarships, please
-              <a href="https://www.gbhem.org/scholarships/">visit the GBHAM website</a>.
+              <a class="link" href="https://www.gbhem.org/scholarships/">visit the GBHAM website</a>.
             </p>
           </div>
         </div>
