--- a/staff.html
+++ b/staff.html
@@ -177,7 +177,7 @@
                 <p class="mb-0" style="color: #2b2a2a">
                   Rev. Beth leads the congregation in weekly worship and provides pastoral care
                   and administration.<br /><br />Contact her at 319-540-1644 or
-                  <a href="mailto:bethmaryharbaugh@gmail.com">bethmaryharbaugh@gmail.com</a>
+                  <a class="link" href="mailto:bethmaryharbaugh@gmail.com">bethmaryharbaugh@gmail.com</a>
                 </p>
               </div>
             </div>
