--- a/worship.html
+++ b/worship.html
@@ -188,7 +188,7 @@
         <!-- Image 1 -->
         <div class="col-lg-3 align-self-center text-center text-lg-start">
           <p>
-            <a href="/JAM.html">
+            <a class="link" href="/JAM.html">
               <img src="./images/JAM_logo.png" class="w-50 rounded" alt="JAM Jesus and Me (white cross atop paint splatter)" />
             </a>
           </p>
@@ -234,7 +234,7 @@
       </div>
       <!-- Pastors Message Link Image -->
       <div class="row text-center">
-        <a href="/pastorsmessage.html"><img class="rounded" src="images/pastormessage.jpg" alt="Pastor's Message" /></a>
+        <a class="link" href="/pastorsmessage.html"><img class="rounded" src="images/pastormessage.jpg" alt="Pastor's Message" /></a>
       </div>
       <!-- Table -->
       <div class="row mx-auto pt-4">
