--- a/missing.html
+++ b/missing.html
@@ -170,7 +170,7 @@
       <div class="col">
         <p>
           If you got here by using a broken link on the website, let us know by emailing
-          <a href="mailto:office@vmumc.com">office@vmumc.com</a>.
+          <a class="link" href="mailto:office@vmumc.com">office@vmumc.com</a>.
         </p>
       </div>
     </div>
