--- a/missionmomentFoodPantry.html
+++ b/missionmomentFoodPantry.html
@@ -291,7 +291,7 @@
       <div class="col">
         <p>
           For more information on the Good Samaritan Food Pantry,
-          <a href="http://www.adelfoodpantry.com">visit their website</a>
+          <a class="link" href="http://www.adelfoodpantry.com">visit their website</a>
         </p>
       </div>
     </div>
@@ -308,7 +308,7 @@
     <div class="row pt-3 mx-auto text-center">
       <div class="col">
         <h3>
-          <a href="/missionmomentTeams.html">Learn about Mission Teams</a>
+          <a class="link" href="/missionmomentTeams.html">Learn about Mission Teams</a>
         </h3>
       </div>
     </div>
