--- a/ciayouth.html
+++ b/ciayouth.html
@@ -46,11 +46,11 @@
       <div class="container-fluid">
         <!-- Brand -->
         <a class="navbar-brand" href="#"><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample05" aria-controls="navbarsExample05"
-          aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false"
+          aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarsExample05">
+        <div class="collapse navbar-collapse" id="navbar">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <!-- Navigation link -->
             <li class="nav-item">
@@ -220,7 +220,8 @@
         <p>
           <strong>Service Project <br />
             Sunday, March 10, 2024<br />12:30-4:30 </strong><br />
-          We will be going to the Bidwell Food Pantry to volunteer.<a class="link" href="https://www.signupgenius.com/go/70A0C4CACAB2AABFC1-47224683-ronald"></a><br />
+          We will be going to the Bidwell Food Pantry to volunteer.<a class="link"
+            href="https://www.signupgenius.com/go/70A0C4CACAB2AABFC1-47224683-ronald"></a><br />
         </p>
       </div>
     </div>
