Update To Current Site

--- a/ciayouth.html
+++ b/ciayouth.html
@@ -265,7 +265,7 @@
     <!-- Image 2 -->
     <div class="row mx-auto pt-3 text-center">
       <div class="col">
-        <img class="w-100 w-lg-75 rounded" src="./images/youthSWAG.jpg" alt="Youth Group:  Adventure, Service" />
+        <img class="w-100 w-lg-75 rounded" src="./images/youthweb2024.jpg" alt="Youth Group:  service, fellowship, fun" />
       </div>
     </div>
   </div>
