--- a/index.html
+++ b/index.html
@@ -261,34 +261,14 @@
           width="250" height="300"></iframe>
       </div>
     </div>
-    <!-- Info, Youth Service Project, UMC Logo Row -->
+    <!-- Info, Youth Group, UMC Logo Row -->
     <div class="row mx-auto mt-4">
-      <!-- Info and Youth Service Project Section -->
+      <!-- Info and Youth Group Section -->
       <div class="col-lg-8">
         <!-- Info 1 Section -->
         <div class="row">
           <!-- Info 1 Text -->
-          <div class="col-lg-6">
-            <p>
-              <strong>March 10<br />
-                Daylight Saving Time Begins
-              </strong>
-              <br />
-              Remember to set your clocks ahead one hour Saturday, March 9.
-            </p>
-          </div>
-          <!-- Info 1 Image -->
-          <div class="col-lg-3 align-self-center text-center">
-            <p>
-              <img class="ms-md-1 ms-lg-5 w-50 w-lg-100 rounded" src="./images/DaylightSavings SpringThumb.jpg"
-                alt="Spring Forward (kangaroo jumps past a clock face)" />
-            </p>
-          </div>
-        </div>
-        <!-- Info 2 Section -->
-        <div class="row">
-          <!-- Info 2 Text -->
-          <div class="col-lg-6">
+          <div class="col-lg-6 align-self-center">
             <p>
               <strong>Ash Wednesday and Lent</strong>
               <br />
@@ -299,7 +279,7 @@
               resurrection three days later on Easter.
             </p>
           </div>
-          <!-- Info 2 Image -->
+          <!-- Info 1 Image -->
           <div class="col-lg-3 align-self-center text-center">
             <p>
               <img class="ms-md-1 ms-lg-5 w-50 w-lg-100 rounded" src="./images/Lent.png" alt='"Lent" incense cup with stylized leaf' />
@@ -307,27 +287,90 @@
             </p>
           </div>
         </div>
-        <!-- Youth Service Project Section -->
+        <!-- Info 2 Section -->
         <div class="row">
-          <!-- Youth Service Project Text -->
-          <div class="col-lg-6">
+          <!-- Info 2 Text -->
+          <div class="col-lg-6 align-self-center">
             <p>
-              <strong>Youth Service Project <br />
-                Sunday, March 10</strong>
+              <strong>Good Friday, March 29<br />7:00 PM</strong>
               <br />
-              The youth groups will be helping at the Bidwell Pantry alongside Missions
-              volunteers.
+              We remember the betrayal, trial, and death of Jesus in a Tenebrae service.
+            </p>
+          </div>
+          <!-- Info 2 Image -->
+          <div class="col-lg-3 align-self-center text-center">
+            <p>
+              <img class="ms-md-1 ms-lg-5 w-50 w-lg-100 rounded" src="./images/GoodFriday.jpg" alt='' />
+              <br />
+            </p>
+          </div>
+        </div>
+        <!-- Info 3 Section -->
+        <div class="row">
+          <!-- Info 3 Text -->
+          <div class="col-lg-6 align-self-center">
+            <p>
+              <strong>Easter Sunday, March 31<br />6:30 AM Sunrise Service</strong>
+              <br />
+              Rejoice with us at this special early service, and stay after the service for breakfast.<br />
+              <strong>10:45 AM Traditional Service</strong><br />
+              He is Risen! This service will include communion.
+              (There will not be an Adult Discussion Group meeting on Easter Sunday.)
+            </p>
+          </div>
+          <!-- Info 3 Image -->
+          <div class="col-lg-3 align-self-center text-center">
+            <p>
+              <img class="ms-md-1 ms-lg-5 w-50 w-lg-100 rounded" src="./images/Easter03thumb.jpg" alt='Easter (cross draped with burial shroud; lilies)' />
+              <br />
+            </p>
+          </div>
+        </div>
+        <!-- VBS Section -->
+        <div class="row">
+          <!-- VBS Text -->
+          <div class="col-lg-6 align-self-center">
+            <p>
+              <strong>June 17-21, Monday-Friday<br />1:00-3:30 PM<br />VBS: Vacation Bible School</strong>
+              <br />
+              Children going into<strong> TK-5th grade</strong> will gather each weekday at the church for fun with a focus of learning more about God at our
+              Vacation Bible School. We'll have crafts, songs, science, story time, outdoor games, and snacks. <br />
+              <a class="link" href="https://vbspro.events/p/events/vmumcvbs2024">Register here</a>; <a class="link" href="VBS.html">learn more and view pictures
+                from prior years
+                here</a>.<br />
+              We're looking for volunteers (<a class="link" href="https://vbspro.events/p/events/vmumcvbs2024">click here</a>) and donors (<a class="link"
+                href="https://www.amazon.com/hz/wishlist/ls/2FGO50SPTWDHF?ref_=wl_share">click here to go to our wish list on Amazon</a>)
+            </p>
+          </div>
+          <!-- VBS Image -->
+          <div class="col-lg-3 align-self-center text-center">
+            <p>
+              <img class="ms-md-1 ms-lg-5 w-50 w-lg-100 rounded" src="./images/VBS2024_logo.png"
+                alt='VBS logo with undersea theme.  &quot;SCUBA, diving into friendship with God&quot;' />
+              <br />
+            </p>
+          </div>
+        </div>
+        <!-- Youth Group Section -->
+        <div class="row">
+          <!-- Youth GroupText -->
+          <div class="col-lg-6 align-self-center">
+            <p>
+              <strong>Youth Fellowship - Bowling<br />
+                Tuesday, March 26<br />4:30-7:30 PM</strong>
+              <br />
+              The youth group will have a night of fun, fellowship, bowling, and pizza. Meet at the church; transportation is provided.
             </p>
             <p>
               <a class="link" href="/ciayouth.html">Learn more about youth meetings and activites here.</a>
             </p>
           </div>
-          <!-- Youth Service Project Image -->
+          <!-- Youth Group Image -->
           <div class="col-lg-3 align-self-center text-center">
             <p>
               <a class="link" href="/ciayouth.html">
-                <img class="ms-md-1 ms-lg-5 w-50 w-lg-100 rounded" src="./images/youth2024.jpg"
-                  alt="youth group logo - neon fish and cross on black background" />
+                <img class="ms-md-1 ms-lg-5 w-50 w-lg-100 rounded" src="./images/youthgroup_bowling.jpg"
+                  alt="bowling balls with label &quot;youth bowling&quot;" />
               </a>
             </p>
           </div>
