--- a/kidsCare.html
+++ b/kidsCare.html
@@ -206,7 +206,7 @@
             <p>
               <strong>Summer 2024</strong> enrollment for our summer program is now open. Only
               Monday-Wednesday-Friday slots are currently available.
-              <a class="link" href="/Publications/KidsCare2024SummerRegistration%20form.pdf">
+              <a class="link" href="/Publications/KidsCare2024SummerRegistration_(MWF).pdf">
                 Here is the registration form.</a>
               Places will be filled on a first-come, first-served basis.
             </p>
