--- a/building-request.html
+++ b/building-request.html
@@ -173,7 +173,7 @@
     </div>
     <!-- Form -->
     <form enctype="multipart/form-data" method="post" action="http://www.response-o-matic.com/mail.php" accept-charset="UTF-8"
-      onsubmit="return handleSubmit('field-792704759794cbb')">
+      onsubmit="return handleSubmit(event, 'field-792704759794cbb')">
       <!-- Hidden Inputs -->
       <div>
         <input type="hidden" name="acctid" id="acctid" value="u7p9qzi9dh3ql0yy" />
