--- a/missing.html
+++ b/missing.html
@@ -30,7 +30,7 @@
 
 <body><!-- Navbar section -->
   <div id="navbar-container" class="container mx-auto p-0 mt-sm-3">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded-sm-top" aria-label="Fifth navbar example">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded-sm-top" aria-label="Navbar ">
       <div class="container-fluid">
         <!-- Brand -->
         <a class="navbar-brand" href="#"><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a>
