--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
   <!-- Navbar section -->
   <div id="navbar-container" class="container mx-auto p-0">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Navbar ">
       <div class="container-fluid">
         <!-- Brand -->
         <a class="navbar-brand" href="#"><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a>
@@ -377,7 +377,7 @@
         </div>
       </div>
       <!-- UMC Logo Section -->
-      <div class="col-lg-4 m-t-50">
+      <div class="col-lg-4">
         <p class="text-center">
           <img class="w-50 rounded" src="./images/UMClogo.jpg" alt="UMC logo - Open Hearts, Open Minds, Open Doors" />
         </p>
