--- a/staff.html
+++ b/staff.html
@@ -42,7 +42,7 @@
   </div>
   <!-- Navbar section -->
   <div id="navbar-container" class="container mx-auto p-0">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Navbar ">
       <div class="container-fluid">
         <!-- Brand -->
         <a class="navbar-brand" href="#"><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a>
