--- a/MinistryShroveTuesday.html
+++ b/MinistryShroveTuesday.html
@@ -187,7 +187,7 @@
   <footer class="mb-sm-3 container mx-auto p-0">
     <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
       <!-- UMC Logo -->
-      <div class="cl-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center">
+      <div class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center">
         <a href="#"><img height="60" width="60" src="./images/white+umc+logo.png" /></a>
       </div>
       <!-- Copyright Info -->
