--- a/MinistryConfirmation.html
+++ b/MinistryConfirmation.html
@@ -8,7 +8,7 @@
   <!-- Setting metadata -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Conformation - Van Meter United Methodist Church</title>
+  <title>Confirmation - Van Meter United Methodist Church</title>
   <meta name="keywords" content="Van Meter United Methodist Church, Van Meter, VMUMC" />
   <meta name="description"
     content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation." />
